--- a/UniversalDetector.xcodeproj/xcshareddata/xcschemes/UniversalDetectorOSX.xcscheme
+++ b/UniversalDetector.xcodeproj/xcshareddata/xcschemes/UniversalDetectorOSX.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0500"
+   LastUpgradeVersion = "0600"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -49,6 +49,15 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "5441913917A0E64E007E3C1D"
+            BuildableName = "libUniversalDetectorOSX.a"
+            BlueprintName = "UniversalDetectorOSX"
+            ReferencedContainer = "container:UniversalDetector.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
